--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,12 @@ gprozubi_SOURCES = \
 	main.c \
 	support.c support.h \
 	interface.c interface.h \
-	callbacks.c callbacks.h
+	callbacks.c callbacks.h \
+	prozubilib/prozubilib.c \
+	prozubilib/kdata2/kdata2.c \
+	prozubilib/kdata2/cYandexDisk/cYandexDisk.c\
+	prozubilib/kdata2/cYandexDisk/cJSON.c\
+	prozubilib/kdata2/cYandexDisk/uuid4.c
 
-gprozubi_LDADD = @PACKAGE_LIBS@ $(INTLLIBS)
+gprozubi_LDADD = @PACKAGE_LIBS@ $(INTLLIBS) -lsqlite3 -lcurl
 
