--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
+SUBDIRS = prozubilib
+
 INCLUDES = \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
@@ -11,14 +13,6 @@ gprozubi_SOURCES = \
 	main.c \
 	support.c support.h \
 	interface.c interface.h \
-	callbacks.c callbacks.h \
-	prozubilib/prozubilib.c \
-	prozubilib/kdata2/kdata2.c \
-	prozubilib/kdata2/cYandexDisk/cYandexDisk.c\
-	prozubilib/kdata2/cYandexDisk/cJSON.c\
-	prozubilib/kdata2/cYandexDisk/uuid4.c\
-	prozubilib/date-time/strftime.c\
-	prozubilib/date-time/strptime.c
+	callbacks.c callbacks.h
 
-gprozubi_LDADD = @PACKAGE_LIBS@ $(INTLLIBS) -lsqlite3 -lcurl
-
+gprozubi_LDADD = @PACKAGE_LIBS@ $(INTLLIBS) -L prozubilib/. -lprozubilib -lcurl
