--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,18 +6,17 @@ INCLUDES = \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\"
 
-#lib_LTLIBRARIES = libYDConnect.la
-#libYDConnect_la_SOURCES = YDConnect.cc webview.h
-#libYDConnect_la_CXXFLAGS = $(WEBKIT_CFLAGS)
-#libYDConnect_la_LIBADD = $(WEBKIT_LIBS)
+lib_LTLIBRARIES = libYDConnect.la
+libYDConnect_la_SOURCES = YDConnect.cc webview.h
+libYDConnect_la_CXXFLAGS = $(WEBKIT_CFLAGS)
+libYDConnect_la_LIBADD = $(WEBKIT_LIBS)
 
 bin_PROGRAMS = gprozubi
 gprozubi_SOURCES = \
 	main.c \
-	support.c support.h \
 	interface.c interface.h \
 	callbacks.c callbacks.h
-gprozubi_CFLAGS = $(GTK2_CFLAGS)
-gprozubi_LDADD = $(INTLLIBS) $(GTK2_LIBS) \
-								 -Lprozubilib/. -lprozubilib -lcurl \
-								 -L.libs/ -lYDConnect
+gprozubi_CFLAGS = $(GTK_CFLAGS)
+gprozubi_LDADD = $(INTLLIBS) $(GTK_LIBS) \
+								 -Lprozubilib/. -lprozubilib -lcurl -lsqlite3
+#-L.libs/ -lYDConnect
